<?xml version="1.0"?>
<package format="2">
  <name>gps_trekking</name>
  <version>1.0.0</version>
  <description>GPS NMEA Parse Package for the Trekking Robot FACENS</description>

  <maintainer email="felipegaldino16@gmail.com">Felipe Galdino</maintainer>

  <license>Apache 2</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <export>

  </export>
</package>
